Fix word wrapping issue

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -24,3 +24,14 @@ img {
   max-width: 100%;
   display: block;
 }
+
+pre {
+  code {
+    font-size: 1rem;
+    color: rgb(255, 190, 137);
+  }
+  padding: 1rem;
+  background-color: black;
+  white-space: pre-wrap; /* Since CSS 2.1 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
